# ChangeLog for games-emulation/gnome-video-arcade
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Jun 2009; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.6.7.ebuild:
  Bumped. Updated homepage.

  10 Feb 2009; Michał Ziąbkowski <mziab@o2.pl>
  gnome-video-arcade-0.6.5.ebuild:
  Added missing dep.

  21 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  -gnome-video-arcade-0.6.3.ebuild, -gnome-video-arcade-0.6.4.ebuild,
  gnome-video-arcade-0.6.5.ebuild:
  Removed cruft. Fixed errors reported by repoman. Fixed inherit.

  14 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.6.5.ebuild:
  Bumped.

  20 Oct 2008; Michał Ziąbkowski <mziab@o2.pl>
  gnome-video-arcade-0.6.3.ebuild, gnome-video-arcade-0.6.4.ebuild:
  Fixed as suggested by repoman.

  20 Oct 2008; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.6.4.ebuild:
  Bumped.

  29 Aug 2008; Michał Ziąbkowski <mziab@o2.pl>
  gnome-video-arcade-0.6.3.ebuild:
  Give paludis some love.

  26 Jul 2008; Michał Ziąbkowski <mziab@o2.pl>
  -gnome-video-arcade-0.6.0.ebuild, -gnome-video-arcade-0.6.1.ebuild,
  -gnome-video-arcade-0.6.1.1.ebuild, +gnome-video-arcade-0.6.3.ebuild:
  Bumped. Removed cruft.

  25 May 2008; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.6.1.1.ebuild:
  Bumped.

  20 May 2008; Michał Ziąbkowski <mziab@o2.pl>
  -gnome-video-arcade-0.5.6.ebuild, +gnome-video-arcade-0.6.1.ebuild:
  Bumped. Removed oldest ebuild.

  23 Apr 2008; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.6.0.ebuild:
  Bumped.

  07 Apr 2008; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.5.6.ebuild:
  Readded keywords.

  07 Apr 2008; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.5.6.ebuild:
  Initial ebuild.
