@@ -1,6 +1,8 @@
 DIST gnome-video-arcade-0.6.5.tar.gz 1012139 RMD160 2ae033171f93a48cdbbc78593af377afc1dc7b51 SHA1 e91d6ff9c84f56b7008069bbadfd426aa1a65906 SHA256 eeacfbb0928c3c470fc943c0379614c61d611a0b5ef95557c24675112d8dc345
 DIST gnome-video-arcade-0.6.7.tar.bz2 1099618 RMD160 3686f62ab72646d73d9349949b89e18eb0a3d2ba SHA1 32809ec778d3d962e110f7a14dabf05c7728274a SHA256 3897f713b5ed790214a64f8203c5a8507adcb2c7985badf770dad796c8ca2396
-EBUILD gnome-video-arcade-0.6.5.ebuild 1206 RMD160 828033074ba35e465314f3aab76e981d6cfecb17 SHA1 36ffc53e3462c865530aa587191294a7b161d478 SHA256 df92cad4e6430dafed86e92d42e528d6ae365995cdcff1f3cc29845ed74bd2e3
-EBUILD gnome-video-arcade-0.6.7.ebuild 1168 RMD160 67ecc926f384ef1e871b043f86ab67e856b9f4b9 SHA1 13551ac95b8def78204e69f9a0a49b0080c323a0 SHA256 6cb5d09b91c7d58732726a5ede9c52cae18c264b9a1b5c2b0952d846ad645812
-MISC ChangeLog 1804 RMD160 cd04ebb35a5b4c159a33a2bd47563a89df7711c1 SHA1 881209cc83bd6bf463423030935665ab2196d783 SHA256 91f40a3cf036d7973544efd146bce7e6e66d34185d6f04c6b2cbbdcf49bf3ca0
+DIST gnome-video-arcade-0.6.8.tar.bz2 1809528 RMD160 8fc76c46b6063cf236d030bbb106b90c6c515167 SHA1 c130681c638e72a36b1fbcbe382afc620fa7a741 SHA256 927d42df02728049d6cd7fa7f3efdd16d83e105c3e48abeda2d41d420546a53b
+EBUILD gnome-video-arcade-0.6.5.ebuild 1208 RMD160 1d942ad8e106fa1bfd2efeb784f38ee5a4ecdc25 SHA1 b413ca28dc4f02eafea584e5e0e5e1d55c59c107 SHA256 30bdbfed9584f47bff024b39a29278628c08179031834c32ba4d565437cf9f12
+EBUILD gnome-video-arcade-0.6.7.ebuild 1098 RMD160 2872a99a6bdd307009020589a69e8d7f530fac49 SHA1 c918de8337f978300809742add00072e69464c9a SHA256 69989046b69c5f5e4899126eec39a60a63c69a0f8dce7f5223967449d1a634f5
+EBUILD gnome-video-arcade-0.6.8.ebuild 1169 RMD160 cdba3bd88f744e75f858eb775645e19e9eb50ca0 SHA1 085dfb5f81801ca474f6002845b1b993eec68dd0 SHA256 b5c4e1f71a36b0aacda376acc2e15f615dc80664089d351322baa27cce33047e
+MISC ChangeLog 2156 RMD160 73dbc393bbd4e9a88fa56853087138b066f9c9d1 SHA1 60e01d4d95a53dfcaa8c92b20d5bb287f2782365 SHA256 2f98194413ac0d0514ff7fb57038a7d2adf656326e39c1c277a101011fe0d770
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
