@@ -1,6 +1,15 @@
 # ChangeLog for games-emulation/gnome-video-arcade
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*gnome-video-arcade-0.6.8 (27 Jan 2010)
+
+  27 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
+  gnome-video-arcade-0.6.5.ebuild, gnome-video-arcade-0.6.7.ebuild,
+  +gnome-video-arcade-0.6.8.ebuild:
+  Bumped. Seems like the gnome flag is useless if gtk is new enough, so
+  dropping that in all versions which ignore it. Also made the ebuild a bit
+  nicer.
 
   27 Jun 2009; Michał Ziąbkowski <mziab@o2.pl>
   +gnome-video-arcade-0.6.7.ebuild:
